added flow controls: if, if/else, for

--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
                     text: {name: "DATA"}
                 },{
                     text: {name: "WORKSPACE"},
-					//children: [{"text":{"name":"A"},"operation":"VARIABLE","HTMLid":"node-A-1","value":"A","children":[{"text":{"name":"8"},"operation":"NUMBER","HTMLid":"node-NUMBER-2","value":"8"}]}]
-					children: [{
+					children: [{"text":{"name":"FOR"},"operation":"FOR","HTMLid":"node-FOR-1","children":[{"text":{"name":"A"},"operation":"VARIABLE","HTMLid":"node-A-6","value":"A"},{"text":{"name":"1"},"operation":"NUMBER","HTMLid":"node-NUMBER-7","value":"1"},{"text":{"name":"10"},"operation":"NUMBER","HTMLid":"node-NUMBER-8","value":"10"},{"text":{"name":"TYPE"},"operation":"TYPE","HTMLid":"node-TYPE-9","children":[{"text":{"name":"A"},"operation":"VARIABLE","HTMLid":"node-A-11","value":"A"}]}]}]
+					/*children: [{
 						text: {name: "EXP"},
 						onClick: _onClickEXP
-					}]
+					}]*/
                 }]
             };
 
@@ -140,7 +140,7 @@
 						node.children = buildOpChildren(op);
 					}else if(op == "NUMBER"){
 						node.text.name = accum;
-						node.value = accum;
+						node.value = parseInt(accum);
 					}else{ //This is a variable
 						node.operation = "VARIABLE";
 						node.value = op;
@@ -186,6 +186,7 @@
 
 			var _vars = {};
 			var _var_branch = [" VARIABLES", "A", "B", "C", "D"];
+			var _num_ops_branch = [" NUMBERS", 0, 1, 2, 3, 4, 5, 6, 7, 8, 9];
 			var _arith_ops_branch = [" ARITH2", "+", "-", "X", "DIV", "SUMMATION", "FACTORIAL", "EXPONENT", "EQUALS", "LEQ", "LT"];
 			var _logic_ops_branch = [" LOGIC2", "TYPE", "DO", "EVAL", "CONS", "MEM1", "REM1", "AND", "OR", "NOT", "ATOM", "EQUALS", "PROG2", "WHILE", "IF-THEN", "IF-TH-ELSE", "FOR", "=", "Q", "ADL", "CHOP", "FNA", "NAME"];
 
@@ -195,7 +196,7 @@
 			};
 
 			var _ops = {
-				"+": {sig: "xx", run: function(a){return a[0] + a[1];}},
+				"+": {sig: "xx", run: function(a){return parseInt(a[0]) + parseInt(a[1]);}},
 				"-": {sig: "xx", run: function(a){return a[0] - a[1];}},
 				"X": {sig: "xx", run: function(a){return a[0] * a[1];}},
 				"DIV": {sig: "xx", run: function(a){return a[0] / a[1];}},
@@ -208,23 +209,37 @@
 
 				"TYPE": {sig: "x", run: function(a){console.log(a[0]);}},
 				"DO": {sig: "x", run: function(a){}},
-				"EVAL": {sig: "x", run: function(a){}},
-				"CONS": {sig: "x", run: function(a){}},
-				"MEM1": {sig: "x", run: function(a){}},
-				"REM1": {sig: "x", run: function(a){}},
+				"EVAL": {sig: "x", run: function(a){}}, //<-- This evaluates LISP-like expressions
+				"CONS": {sig: "xx", run: function(a){return a;}}, //<-- Just like cons in LISP
+				"MEM1": {sig: "l", run: function(a){return a[0][0];}},
+				"REM1": {sig: "l", run: function(a){return a[0].slice(1);}},
 				"AND": {sig: "xx", run: function(a){return a[0] && a[1];}},
 				"OR": {sig: "xx", run: function(a){return a[0] || a[1];}},
 				"NOT": {sig: "x", run: function(a){return !a[0];}},
-				"ATOM": {sig: "x", run: function(a){}},
+				"ATOM": {sig: "x", run: function(a){return Array.isArray(a[0]);}},
 				"PROG2": {sig: "xx", run: function(a){return a[1];}},
 				"WHILE": {sig: "xx", run: function(a){}},
-				"IF-THEN": {sig: "xx", run: function(a){}},
-				"IF-TH-ELSE": {sig: "xxx", run: function(a){}},
-				"FOR": {sig: "xxxx", run: function(a, node){}},
-				"=": {sig: "xx", run: function(a, node){_vars[node.children[0].value] = a[1];}},
-				"Q": {sig: "x", run: function(a){}},
+				"IF-THEN": {sig: "xx", flowControl: true, run: function(a, node){
+                    if(evaluate(a[0])){
+                        evaluate(a[1]);
+                    }
+                }},
+				"IF-TH-ELSE": {sig: "xxx", flowControl: true, run: function(a){
+                    if(evaluate(a[0])){
+                        evaluate(a[1]);
+                    }else{
+                        evaluate(a[2]);
+                    }
+                }},
+				"FOR": {sig: "vxxx", flowControl: true, run: function(a, node){
+                    for(_vars[node.children[0].value] = evaluate(a[1]); _vars[node.children[0].value] <= evaluate(a[2]); _vars[node.children[0].value]++){
+                        evaluate(a[3]);
+                    }
+                }},
+				"=": {sig: "vx", run: function(a, node){_vars[node.children[0].value] = a[1];}},
+				"Q": {sig: "x", run: function(a){return String(a[0]);}},
 				"ADL": {sig: "xx", run: function(a){}},
-				"CHOP": {sig: "x", run: function(a){}},
+				"CHOP": {sig: "l", run: function(a){return _vars[node.children[0].value].pop();}},
 				"FNA": {sig: "x", run: function(a){}},
 				"NAME": {sig: "xx", run: function(a){return a[0];}},
 
@@ -248,7 +263,11 @@
 				var val = 0;
 
 				if('children' in node && node.children.length > 0){
-					val = _ops[node.operation].run(node.children.map(evaluate), node);
+                    if(_ops[node.operation].flowControl){
+					    val = _ops[node.operation].run(node.children, node);
+                    }else{
+                        val = _ops[node.operation].run(node.children.map(evaluate), node);
+                    }
 				}else if(node.operation == "VARIABLE"){
 					val = _ops[node.operation].run([], node);
 				}else{
@@ -296,14 +315,20 @@
 
 			function buildOpChildren(op){
 				return _ops[op].sig.split("").map(function(arg){
-					if(arg == "x"){
-						nodeN++;
-						return {
-							text: {name: "NUM-EXP"},
-							HTMLid: "node-NUM-EXP-" + nodeN,
-							onClick: _onClickEXP
-						};
-					}
+                    nodeN++;
+				    var node = {
+						text: {name: "NUM-EXP"},
+						HTMLid: "node-EXP-" + nodeN,
+						onClick: _onClickEXP
+					};
+
+					if(arg == "l"){
+                        node.text.name = "LIST";
+					}else if(arg == "v"){
+                        node.text.name = "VARIABLE";
+                    }
+
+                    return node;
 				});
 			}
 
@@ -341,18 +366,10 @@
 			}
 
 			function buildOpTree(ops){
-				/*if(ops.length > 8){
-					var opsTree = _buildOpTree(ops.slice(0, 8));
-					opsTree.children.push(_buildOpTree(ops.slice(8, 16)));
-					return opsTree;
-				}
-
-				return _buildOpTree(ops);*/
-
 				var opsTree = _buildOpTree(ops.slice(0, 8));
 
-				for(var i = 8; i < ops.length; i += 8){
-					opsTree.children.push(_buildOpTree(ops.slice(i, i + 8)));
+				for(var i = 7; i < ops.length; i += 7){
+					opsTree.children.push(_buildOpTree(ops.slice(i, i + 7)));
 				}
 
 				return opsTree;
