cleaning up, looking at adding 1968 UI changes

--- a/index.html
+++ b/index.html
@@ -46,7 +46,13 @@
 	    <script src="treant/Treant.js"></script>
 
 		<script>
+            // 1965
             //https://sci-hub.se/10.1145/1463891.1463940
+            // 1968 - more functions, new interface
+            //      https://archive.org/details/DTIC_ADA574301/page/n79/mode/1up?q=aesop+mitre&view=theater
+            //  Implemented in TREET: https://sci-hub.se/10.1145/800204.806295
+            //  Tiny screen grabs, no full language description, but looks a lot nicer
+
 			var nodes = {
                 text: {name: "OAK-TREE"},
 				onClick: function(){
